Project/micko.output
Grammar

    0 $accept: program $end

    1 program: globalne_lista function_list

    2 globalne_lista: %empty
    3               | globalne_lista globalna

    4 globalna: _TYPE _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: %empty

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    9 parameter: %empty
   10          | _TYPE _ID

   11 $@2: %empty

   12 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   13 variable_list: %empty
   14              | variable_list variable _SEMICOLON

   15 variable: _TYPE _ID
   16         | variable _COMMA _ID

   17 statement_list: %empty
   18               | statement_list statement

   19 statement: compound_statement
   20          | assignment_statement
   21          | if_statement
   22          | return_statement
   23          | inc_statement
   24          | para_statement
   25          | branch_iskaz

   26 para_statement: _PARA _LPAREN para_body _RPAREN statement

   27 para_body: _ID _ASSIGN literal _ABAJO literal _PASO literal
   28          | _ID _ASSIGN literal _ABAJO literal

   29 @3: %empty

   30 $@4: %empty

   31 $@5: %empty

   32 $@6: %empty

   33 $@7: %empty

   34 $@8: %empty

   35 $@9: %empty

   36 $@10: %empty

   37 $@11: %empty

   38 branch_iskaz: _BRANCH _LZAGRADA _ID _STRELICA literal _STRELICA literal _STRELICA literal _RZAGRADA @3 _FIRST $@4 statement $@5 _SECOND $@6 statement $@7 _THIRD $@8 statement $@9 _OTHERWISE $@10 statement $@11 _ENDBRANCH

   39 compound_statement: _LBRACKET statement_list _RBRACKET

   40 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   41 num_exp: exp
   42        | num_exp _AROP exp

   43 exp: literal
   44    | _ID
   45    | _ID _INC
   46    | function_call
   47    | _LPAREN num_exp _RPAREN
   48    | _LPAREN rel_exp _RPAREN _QMARK conditional_exp _COLON conditional_exp

   49 inc_statement: _ID _INC _SEMICOLON

   50 conditional_exp: _ID
   51                | literal

   52 literal: _INT_NUMBER
   53        | _UINT_NUMBER

   54 $@12: %empty

   55 function_call: _ID $@12 _LPAREN argument _RPAREN

   56 argument: %empty
   57         | num_exp

   58 if_statement: if_part
   59             | if_part _ELSE statement

   60 @13: %empty

   61 $@14: %empty

   62 if_part: _IF _LPAREN @13 rel_exp $@14 _RPAREN statement

   63 rel_exp: num_exp _RELOP num_exp

   64 return_statement: _RETURN num_exp _SEMICOLON
   65                 | _RETURN _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 4 8 10 15
_IF (259) 62
_ELSE (260) 59
_RETURN (261) 64 65
_ID (262) 4 8 10 15 16 27 28 38 40 44 45 49 50 55
_INT_NUMBER (263) 52
_UINT_NUMBER (264) 53
_LPAREN (265) 8 26 47 48 55 62
_RPAREN (266) 8 26 47 48 55 62
_LBRACKET (267) 12 39
_RBRACKET (268) 12 39
_ASSIGN (269) 27 28 40
_SEMICOLON (270) 4 14 40 49 64 65
_AROP (271) 42
_RELOP (272) 63
_QMARK (273) 48
_COLON (274) 48
_INC (275) 45 49
_COMMA (276) 16
_PARA (277) 26
_PASO (278) 27
_ABAJO (279) 27 28
_BRANCH (280) 38
_FIRST (281) 38
_SECOND (282) 38
_THIRD (283) 38
_OTHERWISE (284) 38
_ENDBRANCH (285) 38
_STRELICA (286) 38
_LZAGRADA (287) 38
_RZAGRADA (288) 38
ONLY_IF (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
globalne_lista (37)
    on left: 2 3, on right: 1 3
globalna (38)
    on left: 4, on right: 3
function_list (39)
    on left: 5 6, on right: 1 6
function (40)
    on left: 8, on right: 5 6
$@1 (41)
    on left: 7, on right: 8
parameter (42)
    on left: 9 10, on right: 8
body (43)
    on left: 12, on right: 8
$@2 (44)
    on left: 11, on right: 12
variable_list (45)
    on left: 13 14, on right: 12 14
variable (46)
    on left: 15 16, on right: 14 16
statement_list (47)
    on left: 17 18, on right: 12 18 39
statement (48)
    on left: 19 20 21 22 23 24 25, on right: 18 26 38 59 62
para_statement (49)
    on left: 26, on right: 24
para_body (50)
    on left: 27 28, on right: 26
branch_iskaz (51)
    on left: 38, on right: 25
@3 (52)
    on left: 29, on right: 38
$@4 (53)
    on left: 30, on right: 38
$@5 (54)
    on left: 31, on right: 38
$@6 (55)
    on left: 32, on right: 38
$@7 (56)
    on left: 33, on right: 38
$@8 (57)
    on left: 34, on right: 38
$@9 (58)
    on left: 35, on right: 38
$@10 (59)
    on left: 36, on right: 38
$@11 (60)
    on left: 37, on right: 38
compound_statement (61)
    on left: 39, on right: 19
assignment_statement (62)
    on left: 40, on right: 20
num_exp (63)
    on left: 41 42, on right: 40 42 47 57 63 64
exp (64)
    on left: 43 44 45 46 47 48, on right: 41 42
inc_statement (65)
    on left: 49, on right: 23
conditional_exp (66)
    on left: 50 51, on right: 48
literal (67)
    on left: 52 53, on right: 27 28 38 43 51
function_call (68)
    on left: 55, on right: 46
$@12 (69)
    on left: 54, on right: 55
argument (70)
    on left: 56 57, on right: 55
if_statement (71)
    on left: 58 59, on right: 21
if_part (72)
    on left: 62, on right: 58 59
@13 (73)
    on left: 60, on right: 62
$@14 (74)
    on left: 61, on right: 62
rel_exp (75)
    on left: 63, on right: 48 62
return_statement (76)
    on left: 64 65, on right: 22


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (globalne_lista)

    program         go to state 1
    globalne_lista  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: globalne_lista . function_list
    3 globalne_lista: globalne_lista . globalna

    _TYPE  shift, and go to state 4

    globalna       go to state 5
    function_list  go to state 6
    function       go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 globalna: _TYPE . _ID _SEMICOLON
    8 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 5

    3 globalne_lista: globalne_lista globalna .

    $default  reduce using rule 3 (globalne_lista)


State 6

    1 program: globalne_lista function_list .
    6 function_list: function_list . function

    _TYPE  shift, and go to state 9

    $default  reduce using rule 1 (program)

    function  go to state 10


State 7

    5 function_list: function .

    $default  reduce using rule 5 (function_list)


State 8

    4 globalna: _TYPE _ID . _SEMICOLON
    8 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    _SEMICOLON  shift, and go to state 11

    $default  reduce using rule 7 ($@1)

    $@1  go to state 12


State 9

    8 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 13


State 10

    6 function_list: function_list function .

    $default  reduce using rule 6 (function_list)


State 11

    4 globalna: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 4 (globalna)


State 12

    8 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 14


State 13

    8 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 12


State 14

    8 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 15

    $default  reduce using rule 9 (parameter)

    parameter  go to state 16


State 15

   10 parameter: _TYPE . _ID

    _ID  shift, and go to state 17


State 16

    8 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 18


State 17

   10 parameter: _TYPE _ID .

    $default  reduce using rule 10 (parameter)


State 18

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 19

    body  go to state 20


State 19

   12 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 13 (variable_list)

    variable_list  go to state 21


State 20

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 8 (function)


State 21

   12 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   14 variable_list: variable_list . variable _SEMICOLON

    _TYPE  shift, and go to state 22

    $default  reduce using rule 11 ($@2)

    $@2       go to state 23
    variable  go to state 24


State 22

   15 variable: _TYPE . _ID

    _ID  shift, and go to state 25


State 23

   12 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 17 (statement_list)

    statement_list  go to state 26


State 24

   14 variable_list: variable_list variable . _SEMICOLON
   16 variable: variable . _COMMA _ID

    _SEMICOLON  shift, and go to state 27
    _COMMA      shift, and go to state 28


State 25

   15 variable: _TYPE _ID .

    $default  reduce using rule 15 (variable)


State 26

   12 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   18 statement_list: statement_list . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _RBRACKET  shift, and go to state 33
    _PARA      shift, and go to state 34
    _BRANCH    shift, and go to state 35

    statement             go to state 36
    para_statement        go to state 37
    branch_iskaz          go to state 38
    compound_statement    go to state 39
    assignment_statement  go to state 40
    inc_statement         go to state 41
    if_statement          go to state 42
    if_part               go to state 43
    return_statement      go to state 44


State 27

   14 variable_list: variable_list variable _SEMICOLON .

    $default  reduce using rule 14 (variable_list)


State 28

   16 variable: variable _COMMA . _ID

    _ID  shift, and go to state 45


State 29

   62 if_part: _IF . _LPAREN @13 rel_exp $@14 _RPAREN statement

    _LPAREN  shift, and go to state 46


State 30

   64 return_statement: _RETURN . num_exp _SEMICOLON
   65                 | _RETURN . _SEMICOLON

    _ID           shift, and go to state 47
    _INT_NUMBER   shift, and go to state 48
    _UINT_NUMBER  shift, and go to state 49
    _LPAREN       shift, and go to state 50
    _SEMICOLON    shift, and go to state 51

    num_exp        go to state 52
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 31

   40 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   49 inc_statement: _ID . _INC _SEMICOLON

    _ASSIGN  shift, and go to state 56
    _INC     shift, and go to state 57


State 32

   39 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 17 (statement_list)

    statement_list  go to state 58


State 33

   12 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 12 (body)


State 34

   26 para_statement: _PARA . _LPAREN para_body _RPAREN statement

    _LPAREN  shift, and go to state 59


State 35

   38 branch_iskaz: _BRANCH . _LZAGRADA _ID _STRELICA literal _STRELICA literal _STRELICA literal _RZAGRADA @3 _FIRST $@4 statement $@5 _SECOND $@6 statement $@7 _THIRD $@8 statement $@9 _OTHERWISE $@10 statement $@11 _ENDBRANCH

    _LZAGRADA  shift, and go to state 60


State 36

   18 statement_list: statement_list statement .

    $default  reduce using rule 18 (statement_list)


State 37

   24 statement: para_statement .

    $default  reduce using rule 24 (statement)


State 38

   25 statement: branch_iskaz .

    $default  reduce using rule 25 (statement)


State 39

   19 statement: compound_statement .

    $default  reduce using rule 19 (statement)


State 40

   20 statement: assignment_statement .

    $default  reduce using rule 20 (statement)


State 41

   23 statement: inc_statement .

    $default  reduce using rule 23 (statement)


State 42

   21 statement: if_statement .

    $default  reduce using rule 21 (statement)


State 43

   58 if_statement: if_part .
   59             | if_part . _ELSE statement

    _ELSE  shift, and go to state 61

    $default  reduce using rule 58 (if_statement)


State 44

   22 statement: return_statement .

    $default  reduce using rule 22 (statement)


State 45

   16 variable: variable _COMMA _ID .

    $default  reduce using rule 16 (variable)


State 46

   62 if_part: _IF _LPAREN . @13 rel_exp $@14 _RPAREN statement

    $default  reduce using rule 60 (@13)

    @13  go to state 62


State 47

   44 exp: _ID .
   45    | _ID . _INC
   55 function_call: _ID . $@12 _LPAREN argument _RPAREN

    _INC  shift, and go to state 63

    _LPAREN   reduce using rule 54 ($@12)
    $default  reduce using rule 44 (exp)

    $@12  go to state 64


State 48

   52 literal: _INT_NUMBER .

    $default  reduce using rule 52 (literal)


State 49

   53 literal: _UINT_NUMBER .

    $default  reduce using rule 53 (literal)


State 50

   47 exp: _LPAREN . num_exp _RPAREN
   48    | _LPAREN . rel_exp _RPAREN _QMARK conditional_exp _COLON conditional_exp

    _ID           shift, and go to state 47
    _INT_NUMBER   shift, and go to state 48
    _UINT_NUMBER  shift, and go to state 49
    _LPAREN       shift, and go to state 50

    num_exp        go to state 65
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55
    rel_exp        go to state 66


State 51

   65 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 65 (return_statement)


State 52

   42 num_exp: num_exp . _AROP exp
   64 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 67
    _AROP       shift, and go to state 68


State 53

   41 num_exp: exp .

    $default  reduce using rule 41 (num_exp)


State 54

   43 exp: literal .

    $default  reduce using rule 43 (exp)


State 55

   46 exp: function_call .

    $default  reduce using rule 46 (exp)


State 56

   40 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 47
    _INT_NUMBER   shift, and go to state 48
    _UINT_NUMBER  shift, and go to state 49
    _LPAREN       shift, and go to state 50

    num_exp        go to state 69
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55


State 57

   49 inc_statement: _ID _INC . _SEMICOLON

    _SEMICOLON  shift, and go to state 70


State 58

   18 statement_list: statement_list . statement
   39 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _RBRACKET  shift, and go to state 71
    _PARA      shift, and go to state 34
    _BRANCH    shift, and go to state 35

    statement             go to state 36
    para_statement        go to state 37
    branch_iskaz          go to state 38
    compound_statement    go to state 39
    assignment_statement  go to state 40
    inc_statement         go to state 41
    if_statement          go to state 42
    if_part               go to state 43
    return_statement      go to state 44


State 59

   26 para_statement: _PARA _LPAREN . para_body _RPAREN statement

    _ID  shift, and go to state 72

    para_body  go to state 73


State 60

   38 branch_iskaz: _BRANCH _LZAGRADA . _ID _STRELICA literal _STRELICA literal _STRELICA literal _RZAGRADA @3 _FIRST $@4 statement $@5 _SECOND $@6 statement $@7 _THIRD $@8 statement $@9 _OTHERWISE $@10 statement $@11 _ENDBRANCH

    _ID  shift, and go to state 74


State 61

   59 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _PARA      shift, and go to state 34
    _BRANCH    shift, and go to state 35

    statement             go to state 75
    para_statement        go to state 37
    branch_iskaz          go to state 38
    compound_statement    go to state 39
    assignment_statement  go to state 40
    inc_statement         go to state 41
    if_statement          go to state 42
    if_part               go to state 43
    return_statement      go to state 44


State 62

   62 if_part: _IF _LPAREN @13 . rel_exp $@14 _RPAREN statement

    _ID           shift, and go to state 47
    _INT_NUMBER   shift, and go to state 48
    _UINT_NUMBER  shift, and go to state 49
    _LPAREN       shift, and go to state 50

    num_exp        go to state 76
    exp            go to state 53
    literal        go to state 54
    function_call  go to state 55
    rel_exp        go to state 77


State 63

   45 exp: _ID _INC .

    $default  reduce using rule 45 (exp)

